[Text-Wrap][Balance][Pretty] SlidingWidth now includes word-spacing when caching item widths. https://bugs.webkit.org/show_bug.cgi?id=292563 <rdar://150893603>

Reviewed by Alan Baradlay.

This PR updates the inline width caches to account for word spacing when computing
constrained widths.

Combined changes:
* LayoutTests/fast/css3-text/css3-text-wrap/text-wrap-balance-word-spacing-expected.html: Added.
* LayoutTests/fast/css3-text/css3-text-wrap/text-wrap-balance-word-spacing.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineContentConstrainer.cpp:
(WebCore::Layout::InlineContentConstrainer::updateCachedWidths):
(WebCore::Layout::InlineContentConstrainer::computeParagraphLevelConstraints):

Canonical link: https://commits.webkit.org/295034@main